--- a/Main page/index.css
+++ b/Main page/index.css
@@ -7,299 +7,109 @@
   src: url('font2.otf');
 }
 body {
-  font-family: Georgia;
+  font-family: 'Montserrat', sans-serif;
+
   margin: 0;
-  
   background-image: url('bg.png');
   position: inherit;
-}
-#header {
-  transition: all 0.5s;
-  z-index: 997;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-}
 
-#header.header-scrolled,
-#header.header-inner-pages {
-  background: rgba(40, 40, 40, 0.9);
 }
-
-#header .logo {
-  font-size: 28px;
-  margin: 0;
-  padding: 0;
-  line-height: 1;
-  font-weight: 700;
-  letter-spacing: 0.5px;
+/* Navbar */
+.nav-section{
+  background-color:#0f0f0f;
 }
-
-#header .logo a {
-  color: #fff;
+.logo{
+  width:80px;
+  padding: 4px;
 }
-
-#header .logo img {
-  max-height: 40px;
-}
-
-@media (max-width: 992px) {
-  #header {
-    border: 0;
-    padding: 15px 0;
-  }
-}
-
-/*--------------------------------------------------------------
-# Navigation Menu
---------------------------------------------------------------*/
-/**
-* Desktop Navigation 
-*/
-.navbar {
-  padding: 0;
-}
-
-.navbar ul {
-  margin: 0;
-  padding: 0;
-  display: flex;
+.nav-item{
   list-style: none;
-  align-items: center;
 }
-
-.navbar li {
-  position: relative;
+.nav-item a{
+  color:white;
+  text-decoration: none;
 }
+.navbar{
+min-height: 70px;
+display: flex;
+/* align-items: center; */
+justify-content: space-between;
+align-items: center;
+padding: 0 48px !important;
 
-.navbar>ul>li {
-  position: relative;
-  white-space: nowrap;
-  margin: 0 12px;
 }
-
-.navbar a,
-.navbar a:focus {
+.nav-menu{
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  padding: 25px 3px;
-  font-size: 14px;
-  font-weight: 600;
-  color: #fff;;
-  white-space: nowrap;
-  transition: 0.3s;
-  position: relative;
-}
-
-.navbar a i,
-.navbar a:focus i {
-  font-size: 12px;
-  line-height: 0;
-  margin-left: 5px;
-}
-
-.navbar>ul>li>a:before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  bottom: -2px;
-  left: 0;
-  background-color: #009961;
-  visibility: hidden;
-  width: 0px;
-  transition: all 0.3s ease-in-out 0s;
-}
-
-.navbar a:hover:before,
-.navbar li:hover>a:before,
-.navbar .active:before {
-  visibility: visible;
-  width: 100%;
-}
-
-.navbar a:hover,
-.navbar .active,
-.navbar .active:focus,
-.navbar li:hover>a {
-  color: #fff;;
-}
-
-.navbar .dropdown ul {
-  display: block;
-  position: absolute;
-  left: 0;
-  top: calc(100% + 30px);
+  align-items: center;
+  gap: 60px;
   margin: 0;
-  padding: 10px 0;
-  z-index: 99;
-  opacity: 0;
-  visibility: hidden;
-  background: #fff;
-  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
-  transition: 0.3s;
-  border-top: 2px solid #009961;
+  font-family: 'Montserrat', sans-serif;
+
 }
-
-.navbar .dropdown ul li {
-  min-width: 200px;
+.nav-link{
+  transition: 0.7s ease;
 }
-
-.navbar .dropdown ul a {
-  padding: 10px 20px;
-  font-size: 14px;
-  text-transform: none;
-  font-weight: 500;
-  color: #282828;
+.nav-link:hover{
+  color:orange;
 }
-
-.navbar .dropdown ul a i {
-  font-size: 12px;
-}
-
-.navbar .dropdown ul a:hover,
-.navbar .dropdown ul .active:hover,
-.navbar .dropdown ul li:hover>a {
-  color: #009961;
-}
-
-.navbar .dropdown:hover>ul {
-  opacity: 1;
-  top: 100%;
-  visibility: visible;
-}
-
-.navbar .dropdown .dropdown ul {
-  top: 0;
-  left: calc(100% - 30px);
-  visibility: hidden;
-}
-
-.navbar .dropdown .dropdown:hover>ul {
-  opacity: 1;
-  top: 0;
-  left: 100%;
-  visibility: visible;
-}
-
-@media (max-width: 1366px) {
-  .navbar .dropdown .dropdown ul {
-    left: -90%;
-  }
-
-  .navbar .dropdown .dropdown:hover>ul {
-    left: -100%;
-  }
-}
-
-/**
-* Mobile Navigation 
-*/
-.mobile-nav-toggle {
-  color: #fff;
-  font-size: 28px;
-  cursor: pointer;
+.hamburger{
   display: none;
-  line-height: 0;
-  transition: 0.5s;
+  cursor: pointer;
 }
-
-@media (max-width: 991px) {
-  .mobile-nav-toggle {
+.bar{
+  display: block;
+  width:25px;
+  height: 3px;
+  margin:5px auto;
+  -webkit-transition:all 0.3s ease-in-out ;
+  transition:all 0.3s ease-in-out ;
+  background-color: white;
+}
+@media(max-width:768px){
+  .nav-section{
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    background-color:#0f0f0f;
+  }
+  .logo{
+    width:70px;
+  }
+  .hamburger{
     display: block;
   }
 
-  .navbar ul {
-    display: none;
+  .hamburger.active .bar:nth-child(2){
+    opacity: 0;
   }
-}
+  .hamburger.active .bar:nth-child(1){
+    transform: translateY(8px) rotate(45deg);
+  }
+  .hamburger.active .bar:nth-child(3){
+    transform: translateY(-8px) rotate(-45deg);
+  }
+  .nav-menu{
+    position: fixed;
+    left:-100%;
+    top:90px;
+    gap:0;
+    flex-direction: column;
+    background-color: orangered;
+    width:100%;
+    text-align:center;
+    transition: 0.3s;
+    z-index: 100;
+  }
 
-.navbar-mobile {
-  position: fixed;
-  overflow: hidden;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  background: rgba(15, 15, 15, 0.9);
-  transition: 0.3s;
-  z-index: 999;
-}
+  .nav-item{
+    margin:16px 0;
+  }
+  .nav-menu.active{
+    left:0;
+  }
 
-.navbar-mobile .mobile-nav-toggle {
-  position: absolute;
-  top: 15px;
-  right: 15px;
-}
-
-.navbar-mobile ul {
-  display: block;
-  position: absolute;
-  top: 55px;
-  right: 15px;
-  bottom: 15px;
-  left: 15px;
-  padding: 10px 0;
-  background-color: #fff;
-  overflow-y: auto;
-  transition: 0.3s;
-}
-
-.navbar-mobile a,
-.navbar-mobile a:focus {
-  padding: 10px 20px;
-  font-size: 15px;
-  color: #282828;
-}
-
-.navbar-mobile a:hover:before,
-.navbar-mobile li:hover>a:before,
-.navbar-mobile .active:before {
-  visibility: hidden;
-}
-
-.navbar-mobile a:hover,
-.navbar-mobile .active,
-.navbar-mobile li:hover>a {
-  color: #009961;
-}
-
-.navbar-mobile .getstarted,
-.navbar-mobile .getstarted:focus {
-  margin: 15px;
-}
-
-.navbar-mobile .dropdown ul {
-  position: static;
-  display: none;
-  margin: 10px 20px;
-  padding: 10px 0;
-  z-index: 99;
-  opacity: 1;
-  visibility: visible;
-  background: #fff;
-  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
-}
-
-.navbar-mobile .dropdown ul li {
-  min-width: 200px;
-}
-
-.navbar-mobile .dropdown ul a {
-  padding: 10px 20px;
-}
-
-.navbar-mobile .dropdown ul a i {
-  font-size: 12px;
-}
-
-.navbar-mobile .dropdown ul a:hover,
-.navbar-mobile .dropdown ul .active:hover,
-.navbar-mobile .dropdown ul li:hover>a {
-  color: #009961;
-}
-
-.navbar-mobile .dropdown>.dropdown-active {
-  display: block;
 }
 * {
   
@@ -451,7 +261,8 @@ footer li {
   margin: 10px 0;
 }
 
-footer a {
+footer anav
+ {
   color: #eee;
   text-decoration: none;
 }
@@ -464,6 +275,7 @@ footer a {
   /* border: 1px solid red; */
 }
 
+
 /* ------------------------------------------------------------- */
 .about{
   background:url('bg.png') ;
@@ -473,7 +285,7 @@ footer a {
   margin: 3vw 6vw;
 }
 .about-heading{
-  width: 15vw;
+  width: 20vw;
     padding: 0.4vw 0.8vw;
     text-align: center;
     background-color: #333;
@@ -483,7 +295,7 @@ footer a {
 }
 .about-heading h2{
   color:#e82020;
-  font-size: 2vw;
+  font-size: 2.4vw;
 
 }
 .about-container{
@@ -491,7 +303,7 @@ footer a {
   flex-direction: row;
 }
 .about-img{
-  width:50vw;
+  width:50%;
   transition: .5s ease;
   border-radius: 5px;
   box-shadow: rgba(240, 46, 46, 0.4) 5px 5px, rgba(240, 46, 46, 0.3) 10px 10px, rgba(240, 46, 46, 0.2) 15px 15px, rgba(240, 46, 46, 0.1) 20px 20px, rgba(240, 46, 46, 0.05) 25px 25px;
@@ -510,125 +322,18 @@ footer a {
   transition: .5s ease;
   }
   .about-para{
-    margin-left:2vw;
-    font-size: 1.3vw;
+    margin:0 3vw;
+    font-size: 0.95rem;
+    font-family: 'Montserrat', sans-serif;
   }
-/* @import url(https://fonts.googleapis.com/css?family=Open+Sans);
-
-* {
-  box-sizing: border-box;
-}
-
-.about {
-  font-family: 'Open Sans', sans-serif;
-  color: #ccc;
-  
-
-}
-.about-us{
-  margin: 50px 11vw;
-}
-
-
-.wrapper-i {
-  /* padding: 5px; */
-  /* max-width: 960px;
-  width: 100%; */
-  /* margin: 10px auto; */
-  /* margin-top: 80px; */
-  
-/* } */
-
-/* .img{
-  width: 500px;
-}
-
-h2 {
-  color: #fc7010;
-
-}
-
-.columns {
-
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  margin: 5px 0;
- 
-
-}
-
-.column {
-  flex: 1;
-
-  margin: 9px;
-  padding: 0;
-  font-size: 15px;
-  font-family: "Roboto Cn", sans-serif;
-
-
-  &:first-child {
-    margin-left: 0;
+@media (max-width:1010px) {
+  .about-img{
+    display: none;
   }
-
-  &:last-child {
-    margin-right: 0;
-  }
-
-}
-
-@media screen and (max-width: 980px) {
-  .columns .column {
-    margin-bottom: 5px;
-    flex-basis: 40%;
-
-    &:nth-last-child(2) {
-      margin-right: 0;
-    }
-
-    &:last-child {
-      flex-basis: 100%;
-      margin: 0;
-    }
+  .about-para{
+    margin: 0;
   }
 }
-
-@media screen and (max-width: 680px) {
-  .columns .column {
-    flex-basis: 100%;
-    margin: 0 0 5px 0;
-  }
-}
-
-.column {
-  color: whitesmoke;
-
-}
-
-.about-us h2 {
-  font-size: 2.5vw;
-  font-family: 'customfont', sans-serif;;
-  padding: 1% 3.5%;
-
-  /* margin-left: 30px; */
-  /* margin-right: 900px; */
-  /* border-left: 5px solid #F2C20A;
-  display: inline-block;
-  background-color: #100d0d;
-
-
-}
-
- h3{
-  color: rgb(231, 202, 11);
-} */
-
-
-
-
-
-/* ---------------------------------------------------------------------------------------- */
-
 #footer {
   background: #0f0f0f;
   color: #fff;
