--- a/Main page/index.css
+++ b/Main page/index.css
@@ -39,18 +39,13 @@ body {
   height: 2px;
   bottom: 23px;
   left: 4px;
-  background-color: #e93e05;
   visibility: hidden;
   width: 0px;
   transition: all 0.3s ease-in-out 0s;
 }
-
-.navbar a:hover:before,
-.navbar li:hover>a:before,
-.navbar .active:before {
-  visibility: visible;
-  width: 80%;
-  left: 4px;
+.navbar a:hover
+{
+  color: yellow;
 }
 .navbar{
 min-height: 70px;
@@ -362,6 +357,7 @@ footer anav
 }
 #footer {
   background: #0f0f0f;
+  font-family: 'customfont',sans-serif;
   color: #fff;
   font-size: 14px;
   text-align: center;
@@ -392,7 +388,8 @@ footer anav
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: orange linear-gradient(orange,#ff8c00);;
+  background: #e82020;
+  box-shadow: inset 0 0 0 0 #e82020;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -405,7 +402,7 @@ footer anav
 }
 
 #footer .social-links a:hover {
-  background: orange linear-gradient(orange,#ff8c00);;
+  background: #F37373;
   color: #fff;
   text-decoration: none;
 }
@@ -419,10 +416,25 @@ footer anav
 }
 
 #footer .credits a {
-  color: orange linear-gradient(orange,#ff8c00);;
+  color: #e82020;
   transition: 0.3s;
 }
 
 #footer .credits a:hover {
-  color: orange linear-gradient(orange,#ff8c00);;
+  color: #e82020;
+}
+.when-where
+{
+  padding-right:200px;
+  padding-left:50px;
+  display:inline-block;
+}
+.resize
+{
+  height:50px;
+  width:30px;
+}
+.when-where text
+{
+  display:inline;
 }
