--- a/Main page/index.css
+++ b/Main page/index.css
@@ -45,7 +45,8 @@ body {
 }
 .navbar a:hover
 {
-  color: yellow;
+  color:#e82020;
+  
 }
 .navbar{
 min-height: 70px;
@@ -69,7 +70,7 @@ padding: 0 48px !important;
   transition: 0.7s ease;
 }
 .nav-link:hover{
-  color:orange;
+  color:#FC9918;
 }
 .hamburger{
   display: none;
@@ -92,6 +93,11 @@ padding: 0 48px !important;
     padding: 10px;
     background-color:#0f0f0f;
   }
+  .navbar a:hover
+{
+  color:#FC9918;
+  
+}
   .logo{
     width:70px;
   }
@@ -114,7 +120,7 @@ padding: 0 48px !important;
     top:90px;
     gap:0;
     flex-direction: column;
-    background-color: orangered;
+    background-color:#e82020;
     width:100%;
     text-align:center;
     transition: 0.3s;
@@ -143,6 +149,14 @@ padding: 0 48px !important;
   font-family: 'customfont',sans-serif;
   font-size: 10vw;
   margin: 0;
+  line-height: normal;
+}
+.title-caption1{
+  font-family: 'Montserrat',sans-serif;
+  color:#e82020;
+  font-weight: 700;
+  font-size: 2vw;
+  background-color: #0f0f0f;
 }
 .carousel-inner > .item {
   -webkit-backface-visibility: visible;
@@ -259,7 +273,7 @@ padding: 0 48px !important;
 
 footer {
   background: #3b3b3b;
-  margin-top: 100px;
+  /* margin-top: 100px; */
   padding: 30px 0;
 }
 
@@ -312,11 +326,11 @@ footer anav
     background-color: #333;
     font-family: 'customfont',sans-serif;
     margin: 2.5vw 0;
-    border-left: 0.2vw solid yellow;
+    border-left: 0.2vw solid #FC9918;
 }
 .about-heading h2{
   color:#e82020;
-  font-size: 2.4vw;
+  font-size: 3vw;
 
 }
 .about-container{
@@ -355,9 +369,97 @@ footer anav
     margin: 0;
   }
 }
+/* --------------------------DETAILS----------------------------------- */
+
+.details{
+  background:url('bg2.png') ;
+  background-repeat: repeat;
+  padding:10px 0;
+}
+.details-section{
+  margin: 3vw 6vw;
+}
+.details-heading{
+  width: 20vw;
+    padding: 0.4vw 0.8vw;
+    text-align: center;
+    background-color: rgb(22, 21, 21);
+    font-family: 'customfont',sans-serif;
+    margin: 2.5vw 0;
+    border-left: 0.2vw solid #FC9918;
+}
+.details-heading h2{
+  color:#e82020;
+  font-size: 2.4vw;
+
+}
+.details-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.details-col{
+  padding:0 5vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+.when{
+  border-right: 2px solid #FC9918;
+  transition: all 0.3s ease-in-out 0s;
+ 
+  
+}
+
+.where{
+  transition: all 0.3s ease-in-out 0s;
+
+}
+.when-heading{
+  font-family: 'customfont',sans-serif;
+  font-size: 2.5rem;
+  color: #e82020;
+
+}
+.where-heading{
+  font-family: 'customfont',sans-serif;
+  font-size: 2.5rem;
+  color: #e82020;
+  
+}
+.when-details{
+   font-family: 'Montserrat', sans-serif;
+
+}
+.where-details{
+  font-family: 'Montserrat', sans-serif;
+
+}
+.when-img{
+
+  width: 100%;
+  opacity: 0.5;
+}
+.details-icon{
+  font-size: 5vw;
+  /* color:#e82020; */
+}
+.details-icon:hover{
+  font-size: 6vw;
+  transition: all 0.3s ease-in-out 0s;
+  
+}
+.where:hover{
+  font-size: larger;
+}
+.when:hover{
+  font-size: larger;
+}
 #footer {
   background: #0f0f0f;
-  font-family: 'customfont',sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  
   color: #fff;
   font-size: 14px;
   text-align: center;
@@ -365,18 +467,19 @@ footer anav
 }
 
 #footer h3 {
-  font-size: 36px;
+  font-size: 2.5rem;
+  letter-spacing: 1rem;
   font-weight: 700;
-  color: #fff;
+  color:#e82020;
   position: relative;
-  font-family: "Poppins", sans-serif;
+  font-family: 'customfont', sans-serif;
   padding: 0;
   margin: 0 0 15px 0;
 }
 
 #footer p {
-  font-size: 15;
-  font-style: italic;
+  font-size: 1rem;
+  /* font-style: italic; */
   padding: 0;
   margin: 0 0 40px 0;
 }
@@ -388,8 +491,8 @@ footer anav
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #e82020;
-  box-shadow: inset 0 0 0 0 #e82020;
+  background: #FC9918;
+  box-shadow: inset 0 0 0 0 #FC9918;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -402,7 +505,7 @@ footer anav
 }
 
 #footer .social-links a:hover {
-  background: #F37373;
+  background:#FC9918;
   color: #fff;
   text-decoration: none;
 }
@@ -416,25 +519,10 @@ footer anav
 }
 
 #footer .credits a {
-  color: #e82020;
+  color: #FC9918;
   transition: 0.3s;
 }
 
 #footer .credits a:hover {
-  color: #e82020;
-}
-.when-where
-{
-  padding-right:200px;
-  padding-left:50px;
-  display:inline-block;
-}
-.resize
-{
-  height:50px;
-  width:30px;
-}
-.when-where text
-{
-  display:inline;
+  color: #FC9918;
 }
