--- a/schedule/sch.css
+++ b/schedule/sch.css
@@ -7,7 +7,8 @@ body{
   background-position: 0 0;
   background-repeat: repeat;
 }
-/* navbar */
+
+/* Navbar */
 .nav-section{
   position: sticky;
   top:0;
@@ -38,27 +39,23 @@ border: 1px solid rgba(17, 17, 17, 0.13);
   height: 2px;
   bottom: 23px;
   left: 4px;
-  background-color: #e93e05;
   visibility: hidden;
   width: 0px;
   transition: all 0.3s ease-in-out 0s;
 }
-
-.navbar a:hover:before,
-.navbar li:hover>a:before,
-.navbar .active:before {
-  visibility: visible;
-  width: 80%;
-  left: 4px;
+.navbar a:hover
+{
+  color:#e82020;
+  
 }
 .navbar{
 min-height: 70px;
 display: flex;
-align-items: center;
+/* align-items: center; */
 justify-content: space-between;
 align-items: center;
-/* padding: 0 48px !important; */
-padding: 0 48px;
+padding: 0 48px !important;
+
 }
 .nav-menu{
   display: flex;
@@ -73,7 +70,7 @@ padding: 0 48px;
   transition: 0.7s ease;
 }
 .nav-link:hover{
-  color:orange;
+  color:#FC9918;
 }
 .hamburger{
   display: none;
@@ -100,9 +97,14 @@ backdrop-filter: blur(7.4px);
 -webkit-backdrop-filter: blur(7.4px);
 border: 1px solid rgba(17, 17, 17, 0.13);
   }
-  .navbar {
-    padding: 10px;
-  }
+  .navbar a:hover
+{
+  color:#FC9918;
+  
+}
+.navbar {
+  padding: 10px !important;
+}
   .logo{
     width:70px;
   }
@@ -125,7 +127,7 @@ border: 1px solid rgba(17, 17, 17, 0.13);
     top:90px;
     gap:0;
     flex-direction: column;
-    background-color: orangered;
+    background-color:#e82020;
     width:100%;
     text-align:center;
     transition: 0.3s;
@@ -138,7 +140,14 @@ border: 1px solid rgba(17, 17, 17, 0.13);
   .nav-menu.active{
     left:0;
   }
+
 }
+.item, img{
+  height: 100% ;
+  width:  100% ;
+  /* border: 1px solid red; */
+}
+
 .schedule-heading{
   margin:50px 0 30px 0;
   display: flex;
@@ -229,10 +238,80 @@ hr{
   width:10vw;
   border: 1px solid #ff8c00;
 }
-/* footer */
+
+#footer {
+  background: #0f0f0f;
+  font-family: 'Montserrat', sans-serif;
+  
+  color: #fff;
+  font-size: 14px;
+  text-align: center;
+  padding: 30px 0;
+}
+
+#footer h3 {
+  font-size: 2.5rem;
+  letter-spacing: 1rem;
+  font-weight: 700;
+  color:#e82020;
+  position: relative;
+  font-family: 'customfont', sans-serif;
+  padding: 0;
+  margin: 0 0 15px 0;
+}
+
+#footer p {
+  font-size: 1rem;
+  /* font-style: italic; */
+  padding: 0;
+  margin: 0 0 40px 0;
+}
+
+#footer .social-links {
+  margin: 0 0 40px 0;
+}
+
+#footer .social-links a {
+  font-size: 18px;
+  display: inline-block;
+  background: #FC9918;
+  box-shadow: inset 0 0 0 0 #FC9918;
+  color: #fff;
+  line-height: 1;
+  padding: 8px 0;
+  margin-right: 4px;
+  border-radius: 50%;
+  text-align: center;
+  width: 36px;
+  height: 36px;
+  transition: 0.3s;
+}
+
+#footer .social-links a:hover {
+  background:#FC9918;
+  color: #fff;
+  text-decoration: none;
+}
+
+#footer .copyright {
+  margin: 0 0 5px 0;
+}
+
+#footer .credits {
+  font-size: 13px;
+}
+
+#footer .credits a {
+  color: #FC9918;
+  transition: 0.3s;
+}
+
+#footer .credits a:hover {
+  color: #FC9918;
+}
 footer {
   background: #3b3b3b;
-  margin-top: 100px;
+  /* margin-top: 100px; */
   padding: 30px 0;
 }
 
@@ -262,135 +341,4 @@ footer anav
 }
 .main-banner{
    height: 300px;
-}
-.item, img{
-  height: 100% ;
-  width:  100% ;
-  /* border: 1px solid red; */
-}
-
-
-/* ------------------------------------------------------------- */
-.about{
-  background:url('bg.png') ;
-  background-repeat: repeat;
-}
-.about-section{
-  margin: 3vw 6vw;
-}
-.about-heading{
-  width: 20vw;
-    padding: 0.4vw 0.8vw;
-    text-align: center;
-    background-color: #333;
-    font-family: 'customfont',sans-serif;
-    margin: 2.5vw 0;
-    border-left: 0.2vw solid yellow;
-}
-.about-heading h2{
-  color:#e82020;
-  font-size: 2.4vw;
-
-}
-.about-container{
-  display: flex;
-  flex-direction: row;
-}
-.about-img{
-  width:50%;
-  transition: .5s ease;
-  border-radius: 5px;
-  box-shadow: rgba(240, 46, 46, 0.4) 5px 5px, rgba(240, 46, 46, 0.3) 10px 10px, rgba(240, 46, 46, 0.2) 15px 15px, rgba(240, 46, 46, 0.1) 20px 20px, rgba(240, 46, 46, 0.05) 25px 25px;
-
-}
-  .about-img:hover{
-  box-shadow:
-  1px 1px #e82020,
-  2px 2px #e82020,
-  3px 3px #e82020,
-  4px 4px #e82020,
-  5px 5px #e82020,
-  6px 6px #e82020;
-  -webkit-transform: translateX(-3px);
-  transform: translateX(-3px);
-  transition: .5s ease;
-  }
-  .about-para{
-    margin:0 3vw;
-    font-size: 0.95rem;
-    font-family: 'Montserrat', sans-serif;
-  }
-@media (max-width:1010px) {
-  .about-img{
-    display: none;
-  }
-  .about-para{
-    margin: 0;
-  }
-}
-#footer {
-  background: #0f0f0f;
-  color: #fff;
-  font-size: 14px;
-  text-align: center;
-  padding: 30px 0;
-}
-
-#footer h3 {
-  font-size: 36px;
-  font-weight: 700;
-  color: #fff;
-  position: relative;
-  font-family: "Poppins", sans-serif;
-  padding: 0;
-  margin: 0 0 15px 0;
-}
-
-#footer p {
-  font-size: 15;
-  font-style: italic;
-  padding: 0;
-  margin: 0 0 40px 0;
-}
-
-#footer .social-links {
-  margin: 0 0 40px 0;
-}
-
-#footer .social-links a {
-  font-size: 18px;
-  display: inline-block;
-  background: orange linear-gradient(orange,#ff8c00);;
-  color: #fff;
-  line-height: 1;
-  padding: 8px 0;
-  margin-right: 4px;
-  border-radius: 50%;
-  text-align: center;
-  width: 36px;
-  height: 36px;
-  transition: 0.3s;
-}
-
-#footer .social-links a:hover {
-  background: orange linear-gradient(orange,#ff8c00);;
-  color: #fff;
-  text-decoration: none;
-}
-
-#footer .copyright {
-  margin: 0 0 5px 0;
-}
-
-#footer .credits {
-  font-size: 13px;
-}
-
-#footer .credits a {
-  color: orange linear-gradient(orange,#ff8c00);;
-  transition: 0.3s;
-}
-
-#footer .credits a:hover {
-  color: orange linear-gradient(orange,#ff8c00);;
 }
