--- a/Main page/index.css
+++ b/Main page/index.css
@@ -6,6 +6,7 @@
   font-family: 'customfont2';
   src: url('font2.otf');
 }
+
 body {
   font-family: 'Montserrat', sans-serif;
 
@@ -98,10 +99,10 @@ padding: 0 48px !important;
     justify-content: space-between;
     padding: 10px;
     border-radius:8px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(7.4px);
--webkit-backdrop-filter: blur(7.4px);
-border: 1px solid rgba(17, 17, 17, 0.13);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(7.4px);
+    -webkit-backdrop-filter: blur(7.4px);
+    border: 1px solid rgba(17, 17, 17, 0.13);
   }
   .navbar a:hover
 {
@@ -284,19 +285,19 @@ border: 1px solid rgba(17, 17, 17, 0.13);
   color: #333;
 }
 
-footer {
+.footer {
   background: #3b3b3b;
   /* margin-top: 100px; */
   padding: 30px 0;
 }
 
-footer:after {
+.footer:after {
   content: "";
   display: block;
   clear: both;
 }
 
-footer ul {
+.footer ul {
   float: left;
   padding: 0;
   list-style-type: none;
@@ -305,11 +306,11 @@ footer ul {
   margin-right: 2%;
 }
 
-footer li {
+.footer li {
   margin: 10px 0;
 }
 
-footer anav
+.footer anav
  {
   color: #eee;
   text-decoration: none;
@@ -378,7 +379,24 @@ footer anav
   .about-img{
     display: none;
   }
+  .about-heading h2 {
+    color: #e82020;
+    font-size: 5vw;
+    padding: 10px;
+    font-size: 8vw;
+}
+.about-heading {
+  width: 60vw;
+  line-height: 0.45 ;
+  padding: 0.4vw 0.8vw;
+  text-align: center;
+  background-color: #333;
+  font-family: 'customfont',sans-serif;
+  margin: 2.5vw 0;
+  border-left: 0.2vw solid #FC9918;
+}
   .about-para{
+    font-size: 0.9rem;
     margin: 0;
   }
 }
